--- a/app.css
+++ b/app.css
@@ -5,4 +5,10 @@
 
  *{
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    color: #333;
  }
+
+ 
