--- a/app.css
+++ b/app.css
@@ -11,4 +11,28 @@
     color: #333;
  }
 
- 
+ h1,h2,h3,h4 {
+   margin-bottom: 1rem;
+ }
+
+ h1 {
+   font-size: 5.4rem;
+   color: #56a5eb;
+   margin-bottom: 5rem;
+ }
+
+ h1 > span {
+   font-size: 2.4rem;
+   font-weight: 500;
+ }
+
+ h2 {
+   font-size: 4.2rem;
+   margin-bottom: 5rem;
+   font-weight: 700;
+ }
+
+ h3 {
+   font-size: 2.8rem;
+   font-weight: 500;
+ }
