--- a/game.css
+++ b/game.css
@@ -33,4 +33,20 @@
     background-color: #dc3545;
   }
 
+  /* HUD */
+
+  #hud {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .hud-prefix {
+    text-align: center;
+    font-size: 2rem;
+  }
+
+  .hud-main-text {
+    text-align: center;
+  }
+
   
