--- a/game.css
+++ b/game.css
@@ -49,4 +49,15 @@
     text-align: center;
   }
 
+  #progressBar {
+    width: 20rem;
+    height: 4rem;
+    border: 0.3rem solid #56a5eb;
+  }
+
+  #progressBarFull {
+    height: 3.4rem;
+    background-color: #56a5eb;
+    width: 0%;
+  }
   
