--- a/app.css
+++ b/app.css
@@ -102,3 +102,18 @@
    box-shadow: none;
    transform: none;
  }
+
+
+ /* FORMS */
+input {
+  margin-bottom: 1rem;
+  width: 20rem;
+  padding: 1.5rem;
+  font-size: 1.8rem;
+  border: none;
+  box-shadow: 0 0.1rem 1.4rem 0 rgba(86, 185, 235, 0.5);
+}
+
+input::placeholder {
+  color: #aaa;
+}
